--- a/catalog.html
+++ b/catalog.html
@@ -39,7 +39,7 @@
     </header>
 
     <main class="container">
-      <h1 class="page-title">Моноподы для селфи</h1>
+        <h1 class="page-title">Моноподы для селфи</h1>
       <h2 class="visually-hidden">Навигационная цепочка</h2>
       <ul class="breadcrumbs">
         <li><a href="index.html">Главная</a></li>
@@ -59,7 +59,7 @@
                 <label for="black-field">Черный</label>
               </li>
               <li class="filter-option">
-                <input class="filter-input filter-input-checkbox" type="checkbox" name="white" id="white-field">
+                <input class="filter-input filter-input-checkbox" type="checkbox" name="white" id="white-field" disabled>
                 <label for="white-field">Белый</label>
               </li>
               <li class="filter-option">
@@ -165,35 +165,37 @@
     </main>
 
     <footer class="main-footer">
-      <a class="footer-logo">
-        <img src="img/logo-device-yellow.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
-      </a>
-      <ul class="footer-user-navigation">
-        <li class="login-link"><a href="login.html">Войти</a></li>
-        <li class="compare"><a href="compare.html">Сравнить</a></li>
-        <li class="basket"><a href="basket.html">Корзина</a></li>
-      </ul>
-      <p class="footer-address">г. Москва, ул. Строителей, 15</p>
-      <div class="footer-navigation">
-        <ul>
+      <div class="footer-top">
+        <a>
+          <img class="footer-logo" src="img/logo-device-yellow.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
+        </a>
+        <ul class="footer-user-navigation">
+          <li class="login-link"><a href="login.html">Войти</a></li>
+          <li class="compare"><a href="compare.html">Сравнить</a></li>
+          <li class="basket"><a href="basket.html">Корзина</a></li>
+        </ul>
+      </div>
+      <div class="footer-middle">
+        <p class="footer-address">г. Москва, ул. Строителей, 15</p>
+        <ul class="middle-menu">
           <li><a href="delivery.html">Доставка</a></li>
           <li><a href="warranty.html">Гарантия</a></li>
           <li><a href="contacts.html">Контакты</a></li>
         </ul>
+        <p class="footer-tel">Тел.: +7 (495) 495-95-95</p>
       </div>
-      <p class="footer-tel">Тел.: +7 (495) 495-95-95</p>
-      <div class="footer-social">
-        <ul>
-          <li><a class="social-button" href="#">Вконтакте</a></li>
-          <li><a class="social-button" href="#">Инстаграм</a></li>
-          <li><a class="social-button" href="#">Твиттер</a></li>
+      <div class="footer-bottom">
+        <ul class="social-buttons">
+          <li><a class="social-button" href="#" aria-label="Фейсбук">Фейсбук</a></li>
+          <li><a class="social-button" href="#" aria-label="Инстаграм">Инстаграм</a></li>
+          <li><a class="social-button" href="#" aria-label="Твиттер">Твиттер</a></li>
         </ul>
+        <p class="footer-copyright">
+          <a href="https://htmlacademy.ru/">
+            <img src="img/logo-html.svg" width="27" height="35" alt="Логотип HTML Academy">
+          </a>
+        </p>
       </div>
-      <p class="footer-copyright">
-        <a class="button">
-          <img src="img/logo-html.svg" width="27" height="35" alt="Логотип HTML Academy">
-        </a>
-      </p>
     </footer>
   </body>
 </html>
