--- a/index.html
+++ b/index.html
@@ -7,35 +7,37 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="main-header">
-      <nav class="main-navigation">
-        <a class="main-header-logo">
-          <img src="img/logo-device-black.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
-        </a>
-        <ul class="user-navigation">
-          <li class="search-open"><a href="#">Поиск по сайту</a></li>
-          <li class="login-link"><a href="login.html">Войти</a></li>
-          <li class="compare"><a href="compare.html">Сравнить</a></li>
-          <li class="basket"><a href="basket.html">Корзина</a></li>
-        </ul>
-        <ul class="site-navigation">
-          <li><a href="catalog.html">Каталог товаров</a></li>
-          <li>
-            <button class="button catalog-open-button" type="button" aria-label="Раскрыть меню каталога товаров"></button>
-          </li>
-          <li><a href="delivery.html">Доставка</a></li>
-          <li><a href="warranty.html">Гарантия</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-        <ul class="header-catalog-menu">
-          <li><a href="catalog-vr.html">Виртуальная реальность</a></li>
-          <li><a href="catalog-monopods.html">Моноподы для селфи</a></li>
-          <li><a href="catalog-actioncameras.html">Экшн-камеры</a></li>
-          <li><a href="catalog-fitness.html">Фитнес-браслеты</a></li>
-          <li><a href="catalog-smartwatches.html">Умные часы</a></li>
-          <li><a href="catalog-quadcopters.html">Квадрокоптеры</a></li>
-        </ul>
-      </nav>
+    <header class="main-header container">
+        <nav class="main-navigation">
+          <div class="main-header-logo-block">
+            <a class="main-header-logo">
+              <img src="img/logo-device-black.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
+            </a>
+          </div>
+          <ul class="user-navigation">
+            <li class="search-open"><a href="#">Поиск по сайту</a></li>
+            <li class="login-link"><a href="login.html">Войти</a></li>
+            <li class="compare"><a href="compare.html">Сравнить</a></li>
+            <li class="basket"><a href="basket.html">Корзина</a></li>
+          </ul>
+          <ul class="site-navigation">
+            <li><a href="catalog.html">Каталог товаров</a></li>
+            <li>
+              <button class="button catalog-open-button" type="button" aria-label="Раскрыть меню каталога товаров"></button>
+            </li>
+            <li><a href="delivery.html">Доставка</a></li>
+            <li><a href="warranty.html">Гарантия</a></li>
+            <li><a href="contacts.html">Контакты</a></li>
+          </ul>
+          <ul class="header-catalog-menu">
+            <li><a href="catalog-vr.html">Виртуальная реальность</a></li>
+            <li><a href="catalog-monopods.html">Моноподы для селфи</a></li>
+            <li><a href="catalog-actioncameras.html">Экшн-камеры</a></li>
+            <li><a href="catalog-fitness.html">Фитнес-браслеты</a></li>
+            <li><a href="catalog-smartwatches.html">Умные часы</a></li>
+            <li><a href="catalog-quadcopters.html">Квадрокоптеры</a></li>
+          </ul>
+        </nav>
     </header>
     <main class="container">
       <h1 class="visually-hidden">«Device» - интернет-магазин гаджетов</h1>
