index - сделал сетку хедера

--- a/index.html
+++ b/index.html
@@ -21,22 +21,34 @@
             <li class="basket"><a href="basket.html">Корзина</a></li>
           </ul>
           <ul class="site-navigation">
-            <li><a href="catalog.html">Каталог товаров</a></li>
-            <li>
+            <li class="header-catalog"><a href="catalog.html">Каталог товаров</a></li>
+            <li class="header-catalog-button">
               <button class="button catalog-open-button" type="button" aria-label="Раскрыть меню каталога товаров"></button>
             </li>
-            <li><a href="delivery.html">Доставка</a></li>
-            <li><a href="warranty.html">Гарантия</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
+            <li class="header-delivery"><a href="delivery.html">Доставка</a></li>
+            <li class="header-warranty"><a href="warranty.html">Гарантия</a></li>
+            <li class="header-contacts"><a href="contacts.html">Контакты</a></li>
           </ul>
-          <ul class="header-catalog-menu">
-            <li><a href="catalog-vr.html">Виртуальная реальность</a></li>
-            <li><a href="catalog-monopods.html">Моноподы для селфи</a></li>
-            <li><a href="catalog-actioncameras.html">Экшн-камеры</a></li>
-            <li><a href="catalog-fitness.html">Фитнес-браслеты</a></li>
-            <li><a href="catalog-smartwatches.html">Умные часы</a></li>
-            <li><a href="catalog-quadcopters.html">Квадрокоптеры</a></li>
-          </ul>
+          <div class="header-catalog-block">
+            <div class="header-catalog-column-1">
+              <ul class="header-catalog-menu">
+                <li><a href="catalog-vr.html">Виртуальная реальность</a></li>
+                <li><a href="catalog-monopods.html">Моноподы для селфи</a></li>
+                <li><a href="catalog-actioncameras.html">Экшн-камеры</a></li>
+              </ul>
+            </div>
+            <div class="header-catalog-column-2">
+              <ul class="header-catalog-menu">
+                <li><a href="catalog-fitness.html">Фитнес-браслеты</a></li>
+                <li><a href="catalog-smartwatches.html">Умные часы</a></li>
+              </ul>
+            </div>
+            <div class="header-catalog-column-3">
+              <ul class="header-catalog-menu">
+                <li><a href="catalog-quadcopters.html">Квадрокоптеры</a></li>
+              </ul>
+            </div>
+          </div>
         </nav>
     </header>
     <main class="container">
