index - продолжаем сетку main

--- a/index.html
+++ b/index.html
@@ -224,41 +224,44 @@
         </ul>
       </section>
 
-      <section class="about-us">
-        <a href="about-us.html">
-          <h2 class="about-us-title">О нас</h2>
-        </a>
-        <p class="about-us-description">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-        <p class="about-us-description">Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями</p>
-        <ul class="transport-list">
-          <li class="transport-item"><a href="#">Деловые Линии</a></li>
-          <li class="transport-item"><a href="#">Автотрейдинг</a></li>
-          <li class="transport-item"><a href="#">ЖелДорЭкспедиция</a></li>
-        </ul>
-        <p>
-          <a class="button about-us-button" href="about-us.html">
-            Подробнее о нас
+      <div class="index-columns">
+        <section class="about-us">
+          <a href="about-us.html">
+            <h2 class="about-us-title">О нас</h2>
           </a>
-        </p>
-      </section>
+          <p class="about-us-description">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+          <p class="about-us-description">Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями</p>
+          <ul class="transport-list">
+            <li class="transport-item"><a href="#">Деловые Линии</a></li>
+            <li class="transport-item"><a href="#">Автотрейдинг</a></li>
+            <li class="transport-item"><a href="#">ЖелДорЭкспедиция</a></li>
+          </ul>
+          <p>
+            <a class="button about-us-button" href="about-us.html">
+              Подробнее о нас
+            </a>
+          </p>
+        </section>
 
-      <section class="contacts">
-          <a href="contacts.html">
-            <h2 class="contacts-title">Контакты</h2>
-          </a>
-        <p class="contacts-description">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-        <div class="contacts-map">
-          <!-- <iframe src="https://www.google.com/maps/embed?pb=" width="600" height="450" style="border:0" allowfullscreen></iframe> -->
-          <a href="#">
-            <img src="img/map.jpg" width="560" height="222" alt="Карта">
-          </a>
-        </div>
-        <p>
-          <a class="button write-us-button" href="write-us.html">
-            Напишите нам
-          </a>
-        </p>
-      </section>
+        <section class="contacts">
+            <a href="contacts.html">
+              <h2 class="contacts-title">Контакты</h2>
+            </a>
+          <p class="contacts-description">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+          <div class="contacts-map">
+            <!-- <iframe src="https://www.google.com/maps/embed?pb=" width="600" height="450" style="border:0" allowfullscreen></iframe> -->
+            <a href="#">
+              <img src="img/map.jpg" width="560" height="222" alt="Карта">
+            </a>
+          </div>
+          <p>
+            <a class="button write-us-button" href="write-us.html">
+              Напишите нам
+            </a>
+          </p>
+        </section>
+      </div>
+
     </main>
 
     <footer class="main-footer">
