--- a/index.html
+++ b/index.html
@@ -267,35 +267,54 @@
     <footer class="main-footer">
       <div class="container">
         <div class="footer-top">
-          <a>
-            <img class="footer-logo" src="img/logo-device-yellow.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
-          </a>
-          <ul class="footer-user-navigation">
-            <li class="login-link"><a href="login.html">Войти</a></li>
-            <li class="compare"><a href="compare.html">Сравнить</a></li>
-            <li class="basket"><a href="basket.html">Корзина</a></li>
-          </ul>
+          <div class="column-1">
+            <a>
+              <img class="footer-logo" src="img/logo-device-yellow.svg" width="164" height="35" alt="Логотип интернет-магазина «Device»">
+            </a>
+          </div>
+          <div class="column-2">
+            <ul class="footer-user-navigation">
+              <li class="footer-login-link"><a href="login.html">Войти</a></li>
+              <li class="footer-compare"><a href="compare.html">Сравнить</a></li>
+              <li class="footer-basket"><a href="basket.html">Корзина</a></li>
+            </ul>
+          </div>
         </div>
         <div class="footer-middle">
-          <p class="footer-address">г. Москва, ул. Строителей, 15</p>
-          <ul class="middle-menu">
-            <li><a href="delivery.html">Доставка</a></li>
-            <li><a href="warranty.html">Гарантия</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
-          </ul>
-          <p class="footer-tel">Тел.: +7 (495) 495-95-95</p>
+          <div class="column-1">
+            <span class="footer-address">г. Москва, ул. Строителей, 15</span>
+          </div>
+          <div class="column-2">
+            <ul class="middle-menu">
+              <li><a href="delivery.html">Доставка</a></li>
+              <li><a href="warranty.html">Гарантия</a></li>
+              <li><a href="contacts.html">Контакты</a></li>
+            </ul>
+          </div>
+          <div class="column-3">
+            <span class="footer-tel">Тел.: +7 (495) 495-95-95</span>
+          </div>
         </div>
         <div class="footer-bottom">
-          <ul class="social-buttons">
-            <li><a class="social-button" href="#" aria-label="Фейсбук">Фейсбук</a></li>
-            <li><a class="social-button" href="#" aria-label="Инстаграм">Инстаграм</a></li>
-            <li><a class="social-button" href="#" aria-label="Твиттер">Твиттер</a></li>
-          </ul>
-          <p class="footer-copyright">
-            <a href="https://htmlacademy.ru/">
-              <img src="img/logo-html.svg" width="27" height="35" alt="Логотип HTML Academy">
-            </a>
-          </p>
+          <div class="column-1">
+          </div>
+          <div class="column-2">
+            <ul class="social-buttons">
+              <li>
+                <a class="social-button" href="#" aria-label="Фейсбук">
+                </a>
+              </li>
+              <li><a class="social-button" href="#" aria-label="Инстаграм"></a></li>
+              <li><a class="social-button" href="#" aria-label="Твиттер"></a></li>
+            </ul>
+          </div>
+          <div class="column-3">
+            <span class="footer-copyright">
+              <a href="https://htmlacademy.ru/">
+                <img src="img/logo-html.svg" width="27" height="35" alt="Логотип HTML Academy">
+              </a>
+            </span>
+          </div>
         </div>
       </div>
     </footer>
